src/objects/EventRecapLineItem__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommissionRate__c</fullName>
        <label>Commission Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConcessionaireSplit__c</fullName>
        <label>Concessionaire Split</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cos__c</fullName>
        <label>Cos</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventRecap__c</fullName>
        <label>Event Recap</label>
        <referenceTo>EventRecap__c</referenceTo>
        <relationshipLabel>Event Recap Line Items</relationshipLabel>
        <relationshipName>EventRecapLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GrossSalesAmount__c</fullName>
        <label>Gross Sales Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NameDetail__c</fullName>
        <label>Name Detail</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetOfTax__c</fullName>
        <label>Net Of Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SalesName__c</fullName>
        <label>Sales Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alcoholic Bev Inseat</fullName>
                </value>
                <value>
                    <fullName>Alcoholic Bev VIP</fullName>
                </value>
                <value>
                    <fullName>Can Craft</fullName>
                </value>
                <value>
                    <fullName>Can Dom</fullName>
                </value>
                <value>
                    <fullName>Can Prem</fullName>
                </value>
                <value>
                    <fullName>Catering Beverage</fullName>
                </value>
                <value>
                    <fullName>Catering Food</fullName>
                </value>
                <value>
                    <fullName>Draft Craft</fullName>
                </value>
                <value>
                    <fullName>Draft Dom</fullName>
                </value>
                <value>
                    <fullName>Draft Prem</fullName>
                </value>
                <value>
                    <fullName>Food Inseat</fullName>
                </value>
                <value>
                    <fullName>Food VIP</fullName>
                </value>
                <value>
                    <fullName>Frozen Drink</fullName>
                </value>
                <value>
                    <fullName>General Concessions - All Other NA Bev.</fullName>
                </value>
                <value>
                    <fullName>General Concessions - Food</fullName>
                </value>
                <value>
                    <fullName>General Concessions - Water</fullName>
                </value>
                <value>
                    <fullName>Guy&apos;s Burgers</fullName>
                </value>
                <value>
                    <fullName>Liquor - Double</fullName>
                </value>
                <value>
                    <fullName>Liquor - Single</fullName>
                </value>
                <value>
                    <fullName>Location Specific Beverage</fullName>
                </value>
                <value>
                    <fullName>Location Specific Food</fullName>
                </value>
                <value>
                    <fullName>Location Specific Other</fullName>
                </value>
                <value>
                    <fullName>NA Beverage Inseat</fullName>
                </value>
                <value>
                    <fullName>NA Beverage VIP</fullName>
                </value>
                <value>
                    <fullName>Pizza</fullName>
                </value>
                <value>
                    <fullName>Rita &amp; Malt Beverage</fullName>
                </value>
                <value>
                    <fullName>Tobacco</fullName>
                </value>
                <value>
                    <fullName>Value Beer</fullName>
                </value>
                <value>
                    <fullName>Wine - Bottle</fullName>
                </value>
                <value>
                    <fullName>Wine - Glass</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShowNotes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Catering</fullName>
                </value>
                <value>
                    <fullName>Food/Sub Deal</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>Inseat</fullName>
                </value>
                <value>
                    <fullName>Concessions</fullName>
                </value>
                <value>
                    <fullName>SubContractor</fullName>
                </value>
                <value>
                    <fullName>Location Specific Deals</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Supplemental Reporting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitsSold__c</fullName>
        <label>Units Sold</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserNotes__c</fullName>
        <label>User Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fxGrossSalesAmount__c</fullName>
        <formula>(GrossSalesAmount__c / (EventRecap__r.EventDateTime__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Gross Sales Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxNetOfTax__c</fullName>
        <formula>(NetOfTax__c / (EventRecap__r.EventDateTime__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Net Of Tax (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Event Recap Line Item</label>
    <nameField>
        <displayFormat>ELI-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Recap Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>